--- a/src/app/components/drinks/drinks-list/drinks-list.component.html
+++ b/src/app/components/drinks/drinks-list/drinks-list.component.html
@@ -17,6 +17,7 @@
             <div
               *ngFor="let x of drinksA"
               class="w-1/3 px-8 rounded sm:p-8 md:p-8 my-2 overflow-hidden"
+              (click)="detail(x._id)"
             >
               <img
                 class="w-full object-scale-down cursor-pointer"
