--- a/src/app/components/admin/game/edit-game/edit-game.component.html
+++ b/src/app/components/admin/game/edit-game/edit-game.component.html
@@ -73,6 +73,27 @@
           ></app-required-field>
         </div>
 
+        <div class="md:items-center mb-6">
+          <div class="w-full">
+            <label
+              style="font-family: 'Open Sans', sans-serif;"
+              class="block md:text-2xl text-black-500 font-bold text-center mb-1 md:mb-0 pr-4"
+              for="inline-full-name"
+            >
+              Lista de reglas
+            </label>
+          </div>
+          <div class="w-full">
+            <label
+              style="font-family: 'Open Sans', sans-serif;"
+              class="text-lg md:text-xl block text-black-500 font-bold text-center mb-1 md:mb-0 pr-4"
+              for="inline-full-name"
+            >
+              Añade las reglas del juego
+            </label>
+          </div>
+        </div>
+
         <div formArrayName="rules" class="width-full">
           <div
             *ngFor="let group of RulesArray.controls; let i = index"
@@ -80,45 +101,62 @@
             class="width-full"
           >
             <div class="lg:flex lg:items-center mb-6">
-              <div class="md:w-full lg:w-1/6">
+              <div class="w-full lg:w-1/5">
                 <label
-                  class="block text-black-500 font-bold lg:text-right mb-1 md:mb-0 pr-4"
+                  class="block text-black-500 font-bold lg:text-right mb-1 md:mb-6 pr-4"
                   for="inline-full-name"
                 >
                   Regla
                 </label>
               </div>
-              <div class="md:w-full lg:w-3/6">
-                <input
-                  formControlName="rule"
-                  class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-                  id="inline-full-name"
-                  type="text"
-                  placeholder="Ej. Mínimo tres jugadores."
-                />
-              </div>
-              <div class="pt-4 flex space-x-4 justify-end md:w-full lg:w-2/6">
-                <button
-                  (click)="addRule()"
-                  class="w-1/3 sm:w-1/4 lg:w-1/ shadow bg-gray-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-                  type="button"
-                >
-                  +
-                </button>
-                <button
-                  *ngIf="i != 0"
-                  (click)="deleteRule(i)"
-                  class="w-1/3 sm:w-1/4 lg:w-1/ shadow bg-gray-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-                  type="button"
-                >
-                  -
-                </button>
+              <div class="w-full flex mb-6">
+                <div class="w-4/5">
+                    
+                    <input
+                    matInput
+                    formControlName="rule"
+                    list="ing_list"
+                    class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
+                    id="inline-full-name"
+                    type="text"
+                    placeholder="Ej. Mínimo tres jugadores." 
+                    [matAutocomplete]="auto"
+                    (ngModelChange)="change(i)"
+                    (click)="clicked(i)"
+                  />
+                  <mat-autocomplete #auto="matAutocomplete" autoActiveFirstOption>
+                    <mat-option *ngFor="let option of autocomplete" [value]="option">
+                      {{option}}
+                    </mat-option>
+                  </mat-autocomplete>
+                  
+                  
+                </div>
+                <div class="pt-0 flex space-x-4 justify-end  w-1/5">
+                  <button
+                    *ngIf="i != 0"
+                    (click)="deleteRule(i)"
+                    class="w-3/4  shadow bg-gray-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    type="button"
+                  >
+                    -
+                  </button>
+                </div>
               </div>
             </div>
             <app-required-field
               *ngIf="group.controls.rule.invalid && group.controls.rule.touched"
               [text]="'Este campo es requerido.'"
             ></app-required-field>
+          </div>
+           <div class="pt-0 pb-4 flex space-x-4 justify-center md:w-full">
+            <button
+              (click)="addRule()"
+              class="md:w-1/4 w-1/2 shadow bg-gray-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+              type="button"
+            >
+              Añadir otra
+            </button>
           </div>
         </div>
 
@@ -179,7 +217,7 @@
               <div class="width-2/3 flex items-center justify-center">
                 <img [src]="this.main_image" class="h-24" />
               </div>
-              <div class="pt-4 flex space-x-4 justify-end w-full">
+              <div class="pt-4 flex space-x-4 justify-center w-full">
                 <button
                   (click)="changeImage(this.main_image)"
                   class="w-1/3 sm:w-1/4 shadow bg-gray-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
@@ -195,7 +233,7 @@
         
 
         <div class="md:flex md:items-center mb-6">
-          <div class="flex space-x-4 justify-end md:w-full">
+          <div class="flex space-x-4 justify-center md:w-full">
             <button
               [disabled]="form.invalid"
               (click)="update()"
